	  the paragraph search left us on the magicline, so as to avoid
	  a segfault. (DLR)
  do_input()
	- Add finished parameter, used to indicate when we run or try to
	  run a function associated with a shortcut. (DLR)
  main()
	- Try to automatically detect whether UTF-8 support is needed by
	  setting the NO_UTF8 flag if setlocale() returns a string that
	  doesn't contain "UTF-8". (DLR)
- winio.c:
  titlebar()
	- Rename some variables for consistency, make space an int
	  instead of a size_t, properly handle the case where the prefix
	  length plus the path length is greater than the amount of
	  space available, and fix a typo in an assert. (DLR)
  unget_kbinput()
	- Remove the wide character handling, as it didn't work properly
	  with respect to function keys. (DLR)
  get_kbinput(), get_translated_kbinput(), get_ascii_kbinput(),
  get_untranslated_kbinput()
	- Make the ascii_digits variables ints instead of size_t's,
	  since they will only hold very small values. (DLR)
  get_kbinput()
	- Remove the wide character handling, as it didn't work properly
	  with respect to adding multiple wide characters at once, and
	  ungetting them just caused other problems elsewhere. (DLR)
  get_translated_kbinput()
	- Remove the wide character handling, as it didn't work properly
	  with respect to adding multiple wide characters at once, and
	  ungetting them just caused other problems elsewhere. (DLR)
	- Use if statements instead of switch/case statements to handle
	  ASCII character sequence mode, as they take up less room.
  get_ascii_kbinput()
	- Use if statements instead of switch/case statements to handle
	  ASCII character sequence mode, as they take up less room.
  get_verbatim_kbinput()
	- Don't pass v_kbinput in as a parameter, since we're
	  dynamically allocating it and then returning it. (DLR)
	- Remove v_first parameter, and go back to the old behavior of
	  putting back the first character of the escape sequence, as it